some fixes.. audio still not working
